# dpf2

./: README.md  advanced_options.py  amrex_settings.py  benchmark_matching.py  boundary_conditions.py  circuit_config.py  core_schema.py  device_profiles.py  diagnostics.py  dpf_config.py  experimental_variability.py  grid_resolution.py  initial_conditions.py  metadata.py  ml_model_config.py  neutron_yield_model.py  parallel_settings.py  physics_models.py  postprocessing_settings.py  pyproject.toml  radiation_transport.py  requirements.txt  rlc_solver.py  synthetic_diagnostics.py  units_settings.py  validation_suite.py  warpx_settings.py  xray_emission_model.py
Simulation/: adaptive_mesh_refinement.py  circuit.py  collision_model.py  config_schema.py  constants.py  diagnostics.py  dpf_simulation.py  dpf_simulator_amrex_backend.py  dpf_simulator_full_backend.py  dpf_simulator_server.py  eos.py  eos_selector.py  fluid_solver_high_order.py  hybrid_controller.py  models.py  module_registry.py  pic_solver.py  radiation_model.py  setup.py  sheath_model.py  solver_selector.py  turbulence_model.py  utils.py  warp_piclibrary.py  warpx_wrapper.py
docs/: HPC_DESIGN.md
dpf2/: __init__.py  circuit_solver.py  cli.py  eos.py  fusion.py  pinch_models.py  plasma_model.py  simulation_engine.py
examples/: config.json  quickstart.ipynb  run_simulation.py
tests/: test_advanced_options.py  test_ai_surrogate.py  test_amrex_settings.py  test_benchmark_matching.py  test_boundary_conditions.py  test_circuit_config.py  test_device_profiles.py  test_diagnostics.py  test_dpf_config.py  (+19 more)
(+16 files in other folders)
